--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -1,6 +1,6 @@
 cmake_minimum_required(VERSION 3.10)
-project(Dodawanie_v2)
+project(Calculator)
 
 set(CMAKE_CXX_STANDARD 14)
 
-add_executable(Dodawanie_v2 main.cpp)
+add_executable(Calculator main.cpp Calculator.cpp Calculator.h Number.cpp Number.h)
